tests/snapshots/examples_fixtures/hint_demos__type_mismatch.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/hint_demos/type_mismatch.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E001]: DUPLICATE NAME

Duplicate binding: `sum` is already defined.

  --> examples/hint_demos/type_mismatch.flx:9:1
  |
9 | let sum = age + height;
  | ^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Use a different name or remove the previous definition.

   = note: first defined here
  --> examples/hint_demos/type_mismatch.flx:0:1
  |
== stdout ==
<not executed>
